// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EnumType transform Explicit Enum - auth 1`] = `
"type File @model @auth(rules: [{allow: public}])
{
  id: ID! @primaryKey
  accessLevel: AccessLevel @auth(rules: [{allow: owner, ownerField: "owner"}])
  owner: String
  createdAt: AWSDateTime
  updatedAt: AWSDateTime
}

enum AccessLevel {
  public
  protected
  private
}"
`;

exports[`EnumType transform Explicit Enum - required 1`] = `
"type File @model @auth(rules: [{allow: public}])
{
  id: ID! @primaryKey
  accessLevel: AccessLevel!
  createdAt: AWSDateTime
  updatedAt: AWSDateTime
}

enum AccessLevel {
  public
  protected
  private
}"
`;

exports[`EnumType transform Explicit Enum 1`] = `
"type File @model @auth(rules: [{allow: public}])
{
  id: ID! @primaryKey
  accessLevel: AccessLevel
  createdAt: AWSDateTime
  updatedAt: AWSDateTime
}

enum AccessLevel {
  public
  protected
  private
}"
`;

exports[`EnumType transform Implicit Enum 1`] = `
"type File @model @auth(rules: [{allow: public}])
{
  id: ID! @primaryKey
  accessLevel: AccessLevel
  createdAt: AWSDateTime
  updatedAt: AWSDateTime
}

enum AccessLevel {
  public
  protected
  private
}"
`;
